--- a/home.html
+++ b/home.html
@@ -202,6 +202,33 @@
     ]
   },
   {
+    "title": "Vụ nữ sinh mang chích điện dọa bạn: Đình chỉ học tập 1 tuần",
+    "content": "Vào ngày 10/3, trường THPT Huỳnh Thúc Kháng tại Đắk Lắk đã quyết định đình chỉ học tập 1 tuần đối với nữ sinh P.H.Y.N. vì đã mang chích điện đến trường để dọa bạn và xông vào đánh bạn. Dụng cụ chích điện này thuộc về bố của em, được sử dụng trong công việc giết mổ bò. Nhà trường đang chờ kết quả điều tra từ cơ quan công an để có những biện pháp xử lý tiếp theo.",
+    "link": "https://dantri.com.vn/giao-duc/vu-nu-sinh-mang-chich-dien-doa-ban-dinh-chi-hoc-tap-1-tuan-20250310105106388.htm",
+    "cat": "giao-duc",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao nữ sinh P.H.Y.N. bị đình chỉ học tập?",
+    "answers": [
+      {
+        "text": "Vì mang chích điện dọa bạn",
+        "correct": true
+      },
+      {
+        "text": "Vì không làm bài tập về nhà",
+        "correct": false
+      },
+      {
+        "text": "Vì đi học muộn nhiều lần",
+        "correct": false
+      },
+      {
+        "text": "Vì gây rối trong lớp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 cầu thủ chạy nhanh nhất Champions League mùa này",
     "content": "Bài viết điểm danh 10 cầu thủ có tốc độ chạy nhanh nhất trong mùa Champions League năm nay. Đứng đầu danh sách là Erling Haaland từ Man City với tốc độ 36,9 km/h, tiếp theo là Achraf Hakimi từ PSG và Kylian Mbappe từ Real Madrid. Những cầu thủ trẻ như Abdukodir Khusanov và Ibrahim Osman cũng góp mặt trong bảng xếp hạng, thể hiện sự phát triển của các tài năng mới trong giải đấu.",
     "link": "https://vnexpress.net/10-cau-thu-chay-nhanh-nhat-champions-league-mua-nay-4858432.html",
@@ -287,33 +314,6 @@
     ]
   },
   {
-    "title": "Lợi ích sức khỏe của đậu bắp",
-    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng làm đẹp da.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích sức khỏe nào.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tốt cho việc giảm cân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
     "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
     "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
@@ -336,6 +336,33 @@
       },
       {
         "text": "Do áp lực công việc của cả hai vợ chồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích sức khỏe của đậu bắp",
+    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng làm đẹp da.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích sức khỏe nào.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tốt cho việc giảm cân.",
         "correct": false
       }
     ]
@@ -1327,33 +1354,6 @@
     ]
   },
   {
-    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
-    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
-    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
-    "answers": [
-      {
-        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
-        "correct": false
-      },
-      {
-        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng tiểu đường gây mờ mắt",
     "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
     "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
@@ -1403,6 +1403,33 @@
       },
       {
         "text": "Không, sữa chỉ tốt cho sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
+    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
+    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
+    "answers": [
+      {
+        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
+        "correct": false
+      },
+      {
+        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
         "correct": false
       }
     ]
@@ -1628,37 +1655,6 @@
     ]
   },
   {
-    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
-    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
-    "answers": [
-      {
-        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã học tiếng Anh từ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
     "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
@@ -1685,6 +1681,37 @@
       },
       {
         "text": "12 xe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
+    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
+    "answers": [
+      {
+        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã học tiếng Anh từ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
         "correct": false
       }
     ]
@@ -2470,33 +2497,6 @@
     ]
   },
   {
-    "title": "Bé gái nguy kịch do biến chứng sởi",
-    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
-    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái nguy kịch do biến chứng nào?",
-    "answers": [
-      {
-        "text": "Sởi",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Thủy đậu",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng nghìn ôtô điện VinFast sắp đến Indonesia",
     "content": "VinFast đã xuất khẩu gần 2.500 chiếc ôtô điện đến Indonesia, bao gồm các mẫu VF 3, VF 5, VF e34 và Nerio Green, trên tàu Silver Queen. Lô hàng này sẽ được bàn giao cho người tiêu dùng trước lễ Lebaran của người Hồi giáo. VinFast đánh giá Indonesia là thị trường trọng điểm với tốc độ tăng trưởng cao và đã có kế hoạch mở rộng sản xuất, nhằm cung cấp các dịch vụ và sản phẩm tốt nhất cho khách hàng tại đây.",
     "link": "https://vnexpress.net/hang-nghin-oto-dien-vinfast-sap-den-indonesia-4858752.html",
@@ -2523,6 +2523,33 @@
       },
       {
         "text": "Singapore",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé gái nguy kịch do biến chứng sởi",
+    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
+    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái nguy kịch do biến chứng nào?",
+    "answers": [
+      {
+        "text": "Sởi",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Thủy đậu",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
         "correct": false
       }
     ]
