Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -193,6 +193,37 @@
     ]
   },
   {
+    "title": "Honda Wave 125i nhập Malaysia giá hơn 75 triệu đồng",
+    "content": "Honda Wave 125i, mẫu xe nhập khẩu từ Malaysia, vừa được giới thiệu tại Việt Nam với giá hơn 75 triệu đồng. Chiếc xe này có một số trang bị khác biệt so với phiên bản Future 125 Fi bán chính hãng trong nước, chủ yếu ở hệ thống phanh và tiêu chuẩn khí thải. Wave 125i có động cơ SOHC 125 cc, công suất khoảng 9 mã lực, và tiêu hao nhiên liệu khoảng 1,67 lít/100 km. Mặc dù giá cao gấp đôi so với phiên bản trong nước, Wave 125i vẫn thu hút một nhóm khách hàng ưa chuộng hàng nhập khẩu.",
+    "link": "https://vnexpress.net/honda-wave-125i-nhap-malaysia-gia-hon-75-trieu-dong-4858949.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Honda Wave 125i nhập khẩu từ đâu và có giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "Malaysia, hơn 75 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "Thái Lan, khoảng 30 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Việt Nam, khoảng 32 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Trung Quốc, hơn 70 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Nhật Bản, khoảng 80 triệu đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mở chiến dịch truyền thông chống buôn bán ngà voi với du khách",
     "content": "Cơ quan thẩm quyền quản lý CITES tại Việt Nam đã khởi động chiến dịch truyền thông nhằm nâng cao nhận thức về việc chống buôn bán ngà voi. Chiến dịch này nhấn mạnh tính phi pháp của việc mua bán sản phẩm từ ngà voi và cảnh báo khách du lịch về hậu quả của việc tham gia vào hoạt động này. Các thông điệp sẽ được phát qua màn hình ngoài trời tại sân bay và các điểm du lịch lớn, cũng như trên mạng xã hội. Mục tiêu là bảo vệ loài voi, vốn đang đối mặt với nguy cơ tuyệt chủng vì nạn buôn bán ngà voi.",
     "link": "https://tuoitre.vn/mo-chien-dich-truyen-thong-chong-buon-ban-nga-voi-voi-du-khach-20250310110236141.htm",
@@ -1287,28 +1318,28 @@
     ]
   },
   {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
-    "cat": "suc-khoe",
+    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
+    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
+    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "importance": 7,
+    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
     "answers": [
       {
-        "text": "Bệnh võng mạc tiểu đường",
+        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
         "correct": true
       },
       {
-        "text": "Bệnh tiểu đường type 1",
+        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
         "correct": false
       },
       {
-        "text": "Bệnh tăng huyết áp",
+        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
         "correct": false
       },
       {
-        "text": "Bệnh glôcôm",
+        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
         "correct": false
       }
     ]
@@ -1341,28 +1372,28 @@
     ]
   },
   {
-    "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
-    "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
-    "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
-    "cat": "kinh-doanh",
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để xây dựng ngân sách kép hiệu quả theo bà Lương Thị Mỹ Hạnh?",
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
     "answers": [
       {
-        "text": "Hiểu rõ dòng tiền và phân chia ngân sách cho hiện tại và tương lai.",
+        "text": "Bệnh võng mạc tiểu đường",
         "correct": true
       },
       {
-        "text": "Chỉ cần đầu tư với số tiền lớn ngay từ đầu.",
+        "text": "Bệnh tiểu đường type 1",
         "correct": false
       },
       {
-        "text": "Không cần quan tâm đến việc quản lý chi tiêu.",
+        "text": "Bệnh tăng huyết áp",
         "correct": false
       },
       {
-        "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
+        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -3542,33 +3573,6 @@
       },
       {
         "text": "Vì chấn thương nặng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chiến sự Ukraine 9/3: Kiev vỡ trận tháo chạy ở Kursk, 6.000 lính bị bao vây",
-    "content": "Vào ngày 9/3/2025, khoảng 6.000 binh sĩ Ukraine tại thành phố Sudzha, vùng Kursk, đang rơi vào tình trạng bị bao vây và gần như không còn lối thoát. Lực lượng Nga đã thiết lập một vòng vây hiệu quả, khiến một số đơn vị quân đội Ukraine phải đàm phán xin đầu hàng. Tình hình chiến sự tại khu vực Kursk trở nên nghiêm trọng khi quân đội Nga tiến hành các cuộc tấn công quy mô lớn, và lực lượng Ukraine đang phải đối mặt với nhiều khó khăn trong việc giữ vững vị trí.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-93-kiev-vo-tran-thao-chay-o-kursk-6000-linh-bi-bao-vay-20250309103838761.htm",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao 6.000 lính Ukraine lại bị bao vây ở Sudzha, Kursk?",
-    "answers": [
-      {
-        "text": "Họ đang bị bao vây bởi lực lượng Nga và gần như không còn lối thoát.",
-        "correct": true
-      },
-      {
-        "text": "Họ đã quyết định rút lui về phía bắc.",
-        "correct": false
-      },
-      {
-        "text": "Họ đang tổ chức phản công mạnh mẽ.",
-        "correct": false
-      },
-      {
-        "text": "Họ đã nhận được lệnh tấn công từ chỉ huy.",
         "correct": false
       }
     ]
