--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,64 @@
     ]
   },
   {
+    "title": "Nga ra điều kiện hấp dẫn để thuyết phục Ấn Độ mua \"bóng ma bầu trời\" Su-57",
+    "content": "Nga đã đưa ra một đề nghị hấp dẫn nhằm thuyết phục Ấn Độ mua tiêm kích Su-57E, cho phép nước này sử dụng cơ sở hạ tầng sản xuất Su-30MKI để chế tạo Su-57. Đề xuất này được đưa ra trước triển lãm Aero India 2025 và bao gồm hỗ trợ sản xuất, nâng cấp Su-30MKI và phát triển máy bay chiến đấu nội địa. Ấn Độ đang đối mặt với khoảng cách công nghệ với Trung Quốc và Pakistan, điều này tạo áp lực cho họ trong việc xem xét mua Su-57E hoặc F-35 từ Mỹ.",
+    "link": "https://dantri.com.vn/the-gioi/nga-ra-dieu-kien-hap-dan-de-thuyet-phuc-an-do-mua-bong-ma-bau-troi-su-57-20250310115140229.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Nga đã đưa ra điều kiện gì để thuyết phục Ấn Độ mua tiêm kích Su-57?",
+    "answers": [
+      {
+        "text": "Cho phép Ấn Độ sản xuất tiêm kích tại chỗ.",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá bán cho Ấn Độ.",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp các thiết bị quân sự khác.",
+        "correct": false
+      },
+      {
+        "text": "Tham gia vào các cuộc tập trận cùng Ấn Độ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao vẻ ngoài của Thùy Tiên và Jisoo nhạt nhòa tại show Dior?",
+    "content": "Tại show Dior 2025, Jisoo và Thùy Tiên bị nhận xét là có phong cách trang phục nhạt nhòa, thiếu sức hút so với kỳ vọng. Những bộ trang phục của họ được cho là quá hiền và không bứt phá, đặc biệt là khi cả hai thường gắn liền với hình ảnh quyến rũ, cá tính. Theo nhà thiết kế Kiên Vũ, sự lựa chọn này có thể là một sự nhượng bộ để phù hợp với phong cách thanh lịch của thương hiệu Dior, nhưng cũng khiến họ không nổi bật giữa dàn khách mời quốc tế.",
+    "link": "https://dantri.com.vn/giai-tri/vi-sao-ve-ngoai-cua-thuy-tien-va-jisoo-nhat-nhoa-tai-show-dior-20250309210322969.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
+    "importance": 6,
+    "question": "Tại sao Jisoo và Thùy Tiên bị nhận xét là nhạt nhòa tại show Dior?",
+    "answers": [
+      {
+        "text": "Vì họ chọn trang phục quá hiền",
+        "correct": true
+      },
+      {
+        "text": "Họ không có phong cách riêng",
+        "correct": false
+      },
+      {
+        "text": "Họ không được công chúng yêu thích",
+        "correct": false
+      },
+      {
+        "text": "Họ không có sự chuẩn bị tốt",
+        "correct": false
+      },
+      {
+        "text": "Họ không phải là đại diện của Dior.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -815,33 +873,6 @@
     ]
   },
   {
-    "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
-    "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
-    "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao anh Khánh và vợ lại lục đục trong hôn nhân?",
-    "answers": [
-      {
-        "text": "Vì anh Khánh từ chối điều trị vô sinh",
-        "correct": true
-      },
-      {
-        "text": "Do anh Khánh không yêu vợ",
-        "correct": false
-      },
-      {
-        "text": "Vì vợ anh Khánh không muốn có con",
-        "correct": false
-      },
-      {
-        "text": "Do áp lực công việc của cả hai vợ chồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích sức khỏe của đậu bắp",
     "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
@@ -864,6 +895,33 @@
       },
       {
         "text": "Chỉ tốt cho việc giảm cân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
+    "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
+    "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao anh Khánh và vợ lại lục đục trong hôn nhân?",
+    "answers": [
+      {
+        "text": "Vì anh Khánh từ chối điều trị vô sinh",
+        "correct": true
+      },
+      {
+        "text": "Do anh Khánh không yêu vợ",
+        "correct": false
+      },
+      {
+        "text": "Vì vợ anh Khánh không muốn có con",
+        "correct": false
+      },
+      {
+        "text": "Do áp lực công việc của cả hai vợ chồng",
         "correct": false
       }
     ]
@@ -1337,6 +1395,33 @@
     ]
   },
   {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -1363,33 +1448,6 @@
       },
       {
         "text": "Một chương trình học mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -2156,37 +2214,6 @@
     ]
   },
   {
-    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
-    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
-    "answers": [
-      {
-        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã học tiếng Anh từ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
     "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
@@ -2213,6 +2240,37 @@
       },
       {
         "text": "12 xe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
+    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
+    "answers": [
+      {
+        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã học tiếng Anh từ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
         "correct": false
       }
     ]
@@ -2998,33 +3056,6 @@
     ]
   },
   {
-    "title": "Bé gái nguy kịch do biến chứng sởi",
-    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
-    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái nguy kịch do biến chứng nào?",
-    "answers": [
-      {
-        "text": "Sởi",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Thủy đậu",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng nghìn ôtô điện VinFast sắp đến Indonesia",
     "content": "VinFast đã xuất khẩu gần 2.500 chiếc ôtô điện đến Indonesia, bao gồm các mẫu VF 3, VF 5, VF e34 và Nerio Green, trên tàu Silver Queen. Lô hàng này sẽ được bàn giao cho người tiêu dùng trước lễ Lebaran của người Hồi giáo. VinFast đánh giá Indonesia là thị trường trọng điểm với tốc độ tăng trưởng cao và đã có kế hoạch mở rộng sản xuất, nhằm cung cấp các dịch vụ và sản phẩm tốt nhất cho khách hàng tại đây.",
     "link": "https://vnexpress.net/hang-nghin-oto-dien-vinfast-sap-den-indonesia-4858752.html",
@@ -3051,6 +3082,33 @@
       },
       {
         "text": "Singapore",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé gái nguy kịch do biến chứng sởi",
+    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
+    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái nguy kịch do biến chứng nào?",
+    "answers": [
+      {
+        "text": "Sởi",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Thủy đậu",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
         "correct": false
       }
     ]
@@ -3998,33 +4056,6 @@
       },
       {
         "text": "Chỉ là tin đồn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Làm sao để biết bạn đang yêu?",
-    "content": "Bài viết khám phá cách nhận biết tình yêu thông qua những dấu hiệu không nhất thiết phải là cảm xúc mãnh liệt. Tình yêu chân chính không chỉ là sự thèm muốn hay khoảnh khắc lãng mạn mà là sự kết nối bền vững, xây dựng từ tình bạn và sự tôn trọng lẫn nhau. Nó thể hiện qua những lựa chọn hàng ngày, sự an toàn cảm xúc và mong muốn phát triển cùng nhau. Tình yêu đích thực là tìm thấy niềm vui trong sự đồng hành, không chỉ là cảm giác đam mê thoáng qua.",
-    "link": "https://vnexpress.net/lam-sao-de-biet-ban-dang-yeu-4858599.html",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm sao để biết bạn có đang yêu không?",
-    "answers": [
-      {
-        "text": "Bạn cảm thấy an toàn và thoải mái khi ở bên người đó.",
-        "correct": true
-      },
-      {
-        "text": "Bạn chỉ cảm thấy thích thú tạm thời với họ.",
-        "correct": false
-      },
-      {
-        "text": "Bạn không muốn họ ở lại trong cuộc sống của mình.",
-        "correct": false
-      },
-      {
-        "text": "Bạn không quan tâm đến hạnh phúc của họ.",
         "correct": false
       }
     ]
