Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Tay vợt hạt giống quên vợt ở Indian Wells",
+    "content": "Trong trận đấu tại vòng hai Indian Wells Masters, tay vợt hạt giống số 16 Frances Tiafoe đã quên mang theo vợt vào sân. Sau khi nhận ra, anh đã nhờ HLV David Witt chạy đi lấy vợt, khiến khán giả cười vui vẻ. Tiafoe đã thắng trận đấu đầu tiên gặp Damir Dzumhur nhưng lại để thua trong trận kế tiếp trước Yosuke Watanuki.",
+    "link": "https://vnexpress.net/tay-vot-hat-giong-quen-vot-o-indian-wells-4859103.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 5,
+    "question": "Tay vợt nào quên vợt ở Indian Wells Masters?",
+    "answers": [
+      {
+        "text": "Frances Tiafoe",
+        "correct": true
+      },
+      {
+        "text": "Damir Dzumhur",
+        "correct": false
+      },
+      {
+        "text": "Yosuke Watanuki",
+        "correct": false
+      },
+      {
+        "text": "Jannik Sinner",
+        "correct": false
+      },
+      {
+        "text": "Tallon Griekspoor",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vụ cháy chung cư mini làm 56 người chết: Chủ tọa hỏi chủ nhà có chi tiền để được bỏ qua sai phạm?",
     "content": "Vụ cháy chung cư mini ở phố Khương Hạ, Hà Nội đã khiến 56 người thiệt mạng và 44 người bị thương. Chủ chung cư, Nghiêm Quang Minh, đang bị xét xử về tội 'vi phạm quy định về phòng cháy chữa cháy' và bị cáo buộc đã xây dựng trái phép, vượt quá quy định về số tầng và diện tích. Tại phiên tòa, chủ tọa đã nhiều lần truy vấn về khả năng ông Minh hối lộ cán bộ để được làm ngơ cho các sai phạm, nhưng ông Minh khẳng định không chi tiền cho ai.",
     "link": "https://tuoitre.vn/vu-chay-chung-cu-mini-lam-56-nguoi-chet-chu-toa-hoi-chu-nha-co-chi-tien-de-duoc-bo-qua-sai-pham-2025031013432117.htm",
