Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Lady Gaga sẽ biểu diễn độc quyền tại Singapore, cú kích cầu mới cho đảo quốc sư tử?",
+    "content": "Lady Gaga sẽ tổ chức bốn đêm diễn độc quyền tại Singapore vào tháng 5, đánh dấu điểm dừng chân duy nhất của cô ở Đông Nam Á. Sự kiện này dự kiến sẽ thu hút hàng trăm người hâm mộ từ các quốc gia lân cận và kích cầu du lịch cũng như kinh tế của Singapore. Vé sẽ được mở bán vào ngày 18-3, và có các gói vé kết hợp với khách sạn cũng như nhiều hoạt động tham quan khác cho du khách.",
+    "link": "https://tuoitre.vn/lady-gaga-se-bieu-dien-doc-quyen-tai-singapore-cu-kich-cau-moi-cho-dao-quoc-su-tu-20250310145926128.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lady Gaga sẽ biểu diễn ở đâu vào tháng 5?",
+    "answers": [
+      {
+        "text": "Singapore",
+        "correct": true
+      },
+      {
+        "text": "Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Thái Lan",
+        "correct": false
+      },
+      {
+        "text": "Malaysia",
+        "correct": false
+      },
+      {
+        "text": "Indonesia",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Động thái của Mỹ khiến Ukraine khủng hoảng ở Kursk",
     "content": "Việc Mỹ ngừng chia sẻ thông tin tình báo với Ukraine đã gây ảnh hưởng nghiêm trọng đến khả năng chiến đấu của lực lượng Kiev tại khu vực Kursk. Các nhà phân tích thuộc Viện Nghiên cứu Chiến tranh (ISW) cho rằng, sự đình chỉ này đã tạo điều kiện cho quân đội Nga gia tăng hoạt động tấn công, dẫn đến sự sụp đổ của các vị trí của Ukraine. Từ ngày 5/3, khi việc chia sẻ thông tin dừng lại, quân đội Nga đã có những bước tiến mạnh mẽ, làm phức tạp thêm tình hình cho lực lượng Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/dong-thai-cua-my-khien-ukraine-khung-hoang-o-kursk-20250310141108759.htm",
@@ -838,33 +869,6 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -918,6 +922,33 @@
       },
       {
         "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -2806,33 +2837,6 @@
     ]
   },
   {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
-    "answers": [
-      {
-        "text": "Bệnh võng mạc tiểu đường",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tiểu đường type 1",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh glôcôm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
     "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
     "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
@@ -2855,6 +2859,33 @@
       },
       {
         "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "answers": [
+      {
+        "text": "Bệnh võng mạc tiểu đường",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tiểu đường type 1",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -4570,33 +4601,6 @@
       },
       {
         "text": "Sắc đẹp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hồng Lệ, Nguyên Thanh ‘hụt’ giải thưởng khủng",
-    "content": "Trong giải chạy Run To Live 2025 diễn ra tại TP HCM, hai vận động viên Hoàng Nguyên Thanh và Phạm Thị Hồng Lệ đã không thể phá kỷ lục quốc gia để giành giải thưởng 200 triệu đồng. Nguyên Thanh về nhất với thời gian 1 giờ 12 phút 30, nhưng vẫn kém kỷ lục của mình. Hồng Lệ cũng về nhất ở cự ly 21km nữ nhưng thành tích của cô không đủ để giành giải thưởng lớn. Ban tổ chức cho biết giải thưởng sẽ được bảo lưu cho giải năm sau.",
-    "link": "https://vnexpress.net/hong-le-nguyen-thanh-hut-giai-thuong-khung-4858652.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Hồng Lệ và Nguyên Thanh không giành được giải thưởng 200 triệu đồng?",
-    "answers": [
-      {
-        "text": "Vì họ không phá được kỷ lục quốc gia.",
-        "correct": true
-      },
-      {
-        "text": "Vì thời tiết quá xấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không tham gia đúng cự ly.",
-        "correct": false
-      },
-      {
-        "text": "Vì thiết bị không hoạt động tốt.",
         "correct": false
       }
     ]
