Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -170,6 +170,64 @@
     ]
   },
   {
+    "title": "Hoa hậu Thùy Tiên lộ rõ mệt mỏi khi dự sự kiện giữa lùm xùm kẹo rau củ",
+    "content": "Hoa hậu Thùy Tiên đã tham dự Tuần lễ thời trang Paris mặc dù đang phải đối mặt với áp lực từ dư luận liên quan đến việc quảng cáo cho sản phẩm kẹo rau củ kém chất lượng. Trong sự kiện, cô lộ rõ vẻ mệt mỏi và kém sắc, với quầng mắt trũng sâu và làn da không còn căng bóng. Dù đã nỗ lực thể hiện hình ảnh tích cực, áp lực từ những lùm xùm đã ảnh hưởng đến thần thái của cô tại các buổi trình diễn thời trang.",
+    "link": "https://dantri.com.vn/giai-tri/hoa-hau-thuy-tien-lo-ro-met-moi-khi-du-su-kien-giua-lum-xum-keo-rau-cu-20250310150324904.htm",
+    "cat": "giai-tri",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Thùy Tiên đã gặp phải vấn đề gì khi tham dự Tuần lễ thời trang Paris?",
+    "answers": [
+      {
+        "text": "Cô bị áp lực dư luận vì quảng cáo kẹo rau củ kém chất lượng.",
+        "correct": true
+      },
+      {
+        "text": "Cô không biết cách phối đồ.",
+        "correct": false
+      },
+      {
+        "text": "Cô không được mời tham dự sự kiện.",
+        "correct": false
+      },
+      {
+        "text": "Cô gặp vấn đề về sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hoa hậu Ý Nhi diện thiết kế đặc sắc tại Lễ hội Áo dài TPHCM",
+    "content": "Tại Lễ hội Áo dài TPHCM lần thứ 11, Hoa hậu Ý Nhi đã xuất hiện trong bộ thiết kế áo dài đặc sắc của nhà thiết kế Đỗ Trịnh Hoài Nam. Bộ sưu tập với chủ đề \"Áo dài biểu trưng phụ nữ Việt Nam\" không chỉ thể hiện vẻ đẹp của áo dài mà còn mang ý nghĩa sâu sắc, kỷ niệm 115 năm ngày Quốc tế Phụ nữ 8/3. Đặc biệt, thiết kế này được lấy cảm hứng từ logo của Hội Liên hiệp phụ nữ Việt Nam, kết hợp với công nghệ in ấn hiện đại và chất liệu thoải mái, thanh lịch.",
+    "link": "https://dantri.com.vn/giai-tri/hoa-hau-y-nhi-dien-thiet-ke-dac-sac-tai-le-hoi-ao-dai-tphcm-20250310132847716.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Hoa hậu Ý Nhi đã diện thiết kế áo dài nào tại Lễ hội Áo dài TPHCM?",
+    "answers": [
+      {
+        "text": "Áo dài biểu trưng phụ nữ Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Áo dài truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Áo dài cách tân",
+        "correct": false
+      },
+      {
+        "text": "Áo dài mini",
+        "correct": false
+      },
+      {
+        "text": "Áo dài nghệ thuật",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bảo tàng Mỹ thuật mong muốn người trẻ khám phá về hội họa Việt Nam",
     "content": "Bảo tàng Mỹ thuật Việt Nam đã tổ chức lễ phát động chương trình \"Tìm hiểu mỹ thuật Việt Nam trực tuyến\" nhằm khuyến khích giới trẻ tìm hiểu và yêu thích hội họa. Chương trình này sẽ diễn ra từ ngày 11/3 đến 31/5 và có nhiều cải tiến so với năm trước, với phần thưởng hấp dẫn cho các đơn vị tham gia. Giám đốc bảo tàng hy vọng rằng chương trình sẽ lan tỏa tình yêu văn hóa nghệ thuật Việt Nam đến công chúng, đặc biệt là giới trẻ.",
     "link": "https://dantri.com.vn/giai-tri/bao-tang-my-thuat-mong-muon-nguoi-tre-kham-pha-ve-hoi-hoa-viet-nam-20250310135310659.htm",
@@ -223,6 +281,33 @@
       },
       {
         "text": "Mẹ không quan tâm đến chuyện này.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các phương pháp trị mùi hôi nách",
+    "content": "Bài viết trình bày về các phương pháp trị mùi hôi nách hiệu quả, bao gồm tiêm botox, sử dụng công nghệ vi sóng và dùng thuốc. Nguyên nhân gây hôi nách chủ yếu là do tình trạng tăng tiết mồ hôi, đặc biệt trong điều kiện thời tiết nóng. Các phương pháp điều trị như công nghệ vi sóng có tác dụng lâu dài, trong khi tiêm botox cần lặp lại sau 6-8 tháng. Ngoài ra, việc giữ vệ sinh cơ thể và lựa chọn trang phục cũng góp phần kiểm soát mùi hôi.",
+    "link": "https://vnexpress.net/cac-phuong-phap-tri-mui-hoi-nach-4859126.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những phương pháp nào để trị mùi hôi nách?",
+    "answers": [
+      {
+        "text": "Tiêm botox, công nghệ vi sóng, và dùng thuốc.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần sử dụng nước hoa.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần sử dụng xà phòng thông thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần thay đổi chế độ ăn uống.",
         "correct": false
       }
     ]
@@ -649,6 +734,33 @@
     ]
   },
   {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -675,33 +787,6 @@
       },
       {
         "text": "4,0%/năm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -1174,37 +1259,6 @@
       },
       {
         "text": "Tham gia vào các cuộc tập trận cùng Ấn Độ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao vẻ ngoài của Thùy Tiên và Jisoo nhạt nhòa tại show Dior?",
-    "content": "Tại show Dior 2025, Jisoo và Thùy Tiên bị nhận xét là có phong cách trang phục nhạt nhòa, thiếu sức hút so với kỳ vọng. Những bộ trang phục của họ được cho là quá hiền và không bứt phá, đặc biệt là khi cả hai thường gắn liền với hình ảnh quyến rũ, cá tính. Theo nhà thiết kế Kiên Vũ, sự lựa chọn này có thể là một sự nhượng bộ để phù hợp với phong cách thanh lịch của thương hiệu Dior, nhưng cũng khiến họ không nổi bật giữa dàn khách mời quốc tế.",
-    "link": "https://dantri.com.vn/giai-tri/vi-sao-ve-ngoai-cua-thuy-tien-va-jisoo-nhat-nhoa-tai-show-dior-20250309210322969.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
-    "importance": 6,
-    "question": "Tại sao Jisoo và Thùy Tiên bị nhận xét là nhạt nhòa tại show Dior?",
-    "answers": [
-      {
-        "text": "Vì họ chọn trang phục quá hiền",
-        "correct": true
-      },
-      {
-        "text": "Họ không có phong cách riêng",
-        "correct": false
-      },
-      {
-        "text": "Họ không được công chúng yêu thích",
-        "correct": false
-      },
-      {
-        "text": "Họ không có sự chuẩn bị tốt",
-        "correct": false
-      },
-      {
-        "text": "Họ không phải là đại diện của Dior.",
         "correct": false
       }
     ]
@@ -2103,33 +2157,6 @@
     ]
   },
   {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -2156,6 +2183,33 @@
       },
       {
         "text": "Một chương trình học mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -2891,37 +2945,6 @@
     ]
   },
   {
-    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
-    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
-    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
-    "answers": [
-      {
-        "text": "10 xe",
-        "correct": true
-      },
-      {
-        "text": "20 xe",
-        "correct": false
-      },
-      {
-        "text": "15 xe",
-        "correct": false
-      },
-      {
-        "text": "5 xe",
-        "correct": false
-      },
-      {
-        "text": "12 xe",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
     "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
     "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
@@ -2948,6 +2971,37 @@
       },
       {
         "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
+    "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
+    "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
+    "cat": "oto-xe-may",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Phiên bản Lexus LX 700h Hideki Edition có bao nhiêu xe được sản xuất?",
+    "answers": [
+      {
+        "text": "10 xe",
+        "correct": true
+      },
+      {
+        "text": "20 xe",
+        "correct": false
+      },
+      {
+        "text": "15 xe",
+        "correct": false
+      },
+      {
+        "text": "5 xe",
+        "correct": false
+      },
+      {
+        "text": "12 xe",
         "correct": false
       }
     ]
@@ -4265,37 +4319,6 @@
       },
       {
         "text": "Có giá vé rất cao",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bệ đỡ cho doanh nhân Việt dấn thân",
-    "content": "Bài viết nhấn mạnh vai trò quan trọng của kinh tế tư nhân trong sự phát triển của Việt Nam, đồng thời chỉ ra rằng cần có những chính sách và chiến lược rõ ràng để hỗ trợ doanh nghiệp tư nhân. Tổng Bí thư Tô Lâm đã kêu gọi cần xây dựng những bệ đỡ vững chắc cho doanh nhân Việt, đặc biệt trong bối cảnh hiện nay khi mà nhiều doanh nghiệp đang gặp khó khăn. Bài viết cũng đề cập đến việc cần cải cách thể chế và tháo gỡ rào cản để khuyến khích sự phát triển của khu vực kinh tế tư nhân, nhằm đóng góp nhiều hơn vào nền kinh tế quốc dân.",
-    "link": "https://tuoitre.vn/be-do-cho-doanh-nhan-viet-dan-than-20250309084135411.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Kinh tế tư nhân tại Việt Nam đóng góp bao nhiêu phần trăm vào GDP?",
-    "answers": [
-      {
-        "text": "45%",
-        "correct": true
-      },
-      {
-        "text": "30%",
-        "correct": false
-      },
-      {
-        "text": "20%",
-        "correct": false
-      },
-      {
-        "text": "50%",
-        "correct": false
-      },
-      {
-        "text": "60%",
         "correct": false
       }
     ]
